--- a/main.css
+++ b/main.css
@@ -10,13 +10,13 @@
 /* Pozícionálás */
 
 .profile-card {
-  width: 480px;
-  max-width: calc(100vw - 10px);
+  width: 70%;
+	height:80%; 
 }
 
 body {
   display: flex;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
 }
 body {
@@ -33,8 +33,8 @@ body {
 }
 
 img {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 200px;
   border-radius: 50%;
 }
 .profile-image {
@@ -66,7 +66,7 @@ body {
 
 .profile-card {
   background-color: hsla(0, 0%, 100%, .5);
-  border-radius: 4px;
+  border-radius: 200px;
   box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
 }
 img {
