--- a/main.css
+++ b/main.css
@@ -3,15 +3,19 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-size: 100%;
+  box-sizing:content-box;
+  font-family: 'Stylish', sans-serif;
+	font-size: 100%;
 }
 
 /* Pozícionálás */
 
 .profile-card {
-  width: 70%;
-	height:80%; 
+	position: fixed;
+ margin-top: 20%;
+	margin-left: 40%;
+	 width: 100vw;
+	height:800px; 
 }
 
 body {
@@ -66,7 +70,7 @@ body {
 
 .profile-card {
   background-color: hsla(0, 0%, 100%, .5);
-  border-radius: 200px;
+  border-radius: 400px;
   box-shadow: hsla(0, 0%, 0%, .8) 10px 10px 80px;
 }
 img {
