--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
 	position: fixed;
  margin-top: 20%;
 	margin-left: 40%;
-	 width: 100vw;
+	 width: 200vw;
 	height:800px; 
 }
 
@@ -37,12 +37,13 @@ body {
 }
 
 img {
-  width: 150px;
-  height: 200px;
+  width: 300px;
+  height: 400px;
   border-radius: 50%;
 }
 .profile-image {
-  margin-top: -60px;
+  margin-top: -60rem;
+	margin-left: 10rem;
 }
 
 /* Contact links */
@@ -89,3 +90,21 @@ img:hover {
 .link {
   color: rgb(35, 107, 35);
 } 
+@media (min-width: 768px) {
+.profile-card {
+	position: fixed;
+ margin-top: 18%;
+	margin-left: 40%;
+	 width: 250vw;
+	height:800px; 
+}
+	img {
+   height: 400px;
+		width: 300px;
+  border-radius: 50%;
+}
+.profile-image {
+  margin-top: 0rem;
+	margin-left: 10rem;
+}
+}
